--- a/css/styles.css
+++ b/css/styles.css
@@ -150,10 +150,16 @@ img {
 
 .hero {
     background: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-back.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    max-width: 1440px;
     line-height: 1.07;
     display: flex;
     text-align: center;
     padding: 188px 0;
+    margin: auto;
 }
 
 .hero-container {
@@ -254,6 +260,23 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+}
+
+.advantages-list-icons {
+    padding: 24px 100px;
+    width: 264px;
+    height: 112px;
+}
+
+.container-item-icons {
+    border: 1px solid #8E8F99;
+    /* width: 264px; */
+    height: 112px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    /* display: flex;
+    gap: 24px; */
+    
 }
 
 /* TEAM */
