--- a/css/styles.css
+++ b/css/styles.css
@@ -95,11 +95,51 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
-    /* display: block; */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    position: relative;
+}
+
+.header-link::after {
+    content: '';
+    
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    opacity: 0;
+}
+
+.header-link:hover::after,
+.header-link:focus::after,
+.header-link.current::after {
+    opacity: 1;
+}
+
+.header-link.current {
+    position: relative;
+}
+
+.header-link.current::after {
+    content: '';
+
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
 }
 
 .header-link:hover,
-.header-link:focus {
+.header-link:focus,
+.header-link.current {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -107,7 +147,6 @@ img {
     letter-spacing: 0.02em;
     color: #404bbf;
 }
-
 .contacts {
     font-style: normal;
     margin-left: auto;
@@ -309,6 +348,7 @@ img {
 .container-list-team {
     padding: 32px 0;
     border: 1px solid #e7e9fc;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-list-item {
@@ -338,6 +378,41 @@ img {
     text-align: center;
 }
 
+.team-list-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin-top: 8px;
+}
+
+.team-list-icons-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-list-icons-item:hover,
+.team-list-icons-item:focus {
+    background-color: #404BBF;
+}
+
+.team-list-icon-item-link {
+    padding: 12px;
+}
+
+.icon {
+    fill: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* PORTFOLIO */
 
 .portfolio-title {
@@ -359,16 +434,50 @@ img {
     column-gap: 24px;
 }
 
+.portfolio-list-item {
+    cursor: pointer;
+}
+
+.container-item-img {
+    position: relative;
+    overflow: hidden;
+}
+
+
 .container-list-portfolio {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
     flex-wrap: wrap;
+    
+}
+
+.container-item-img:hover .overlay,
+.portfolio-list-item:hover .overlay {
+    transform: translateY(0);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-text {
+    color: #fff;
+    padding-right: 32px;
+    padding-left: 32px;
+    padding-top: 40px;
 }
 
 .portfolio-list-item {
     width: calc((100% - 48px) / 3);
-    /* border-bottom: 1px solid #e7e9fc; */
 }
 
 .portfolio-list-item-title {
@@ -398,12 +507,16 @@ img {
 }
 
 .footer-container {
-    align-items: center;
+    display: flex;
+    /* justify-content: space-between; */
+}
+
+.container-footer-social-media {
+    margin-left: 120px;
+    
 }
 
 .footer-logo {
-    /* padding-top: 100px;
-    padding-bottom: 16px; */
     display: inline-block;
     margin-bottom: 16px;
 }
@@ -425,6 +538,51 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    width: 264px;
-    /* padding-bottom: 100px; */
+    max-width: 264px;
+}
+
+.footer-list-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    /* text-align: center; */
+    margin-bottom: 16px;
+    /* margin-left: 120px; */
+}
+
+.footer-list-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.footer-list-icons-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-list-icon-item-link {
+    padding: 8px;
+}
+
+.footer-icon {
+    fill: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-list-icons-item:hover,
+.footer-list-icons-item:focus {
+    background-color: #31D0AA;
 }
