--- a/css/styles.css
+++ b/css/styles.css
@@ -493,6 +493,7 @@ img {
 
 .overlay-text {
     position: absolute;
+    top: 0;
     top: 100%;
     font-size: 16px;
     line-height: 1.5;
@@ -502,7 +503,7 @@ img {
     background-color: #4d5ae5;
     width: 100%;
     height: 100%;
-    transform: translateY(0);
+    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -512,6 +513,11 @@ img {
 
 .portfolio-list-item {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+    transform: translateY(0%);
 }
 
 .portfolio-list-item-title {
