--- a/css/styles.css
+++ b/css/styles.css
@@ -494,7 +494,7 @@ img {
 .overlay-text {
     position: absolute;
     top: 0;
-    top: 100%;
+    /* top: 100%; */
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -508,7 +508,7 @@ img {
 }
 
 .portfolio-list-item:hover .overlay-text {
-    transform: translateY(-100%);
+    transform: translateY(0);
 }
 
 .portfolio-list-item {
@@ -516,9 +516,9 @@ img {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list-item:hover {
+/* .portfolio-list-item:hover {
     transform: translateY(0%);
-}
+} */
 
 .portfolio-list-item-title {
     font-family: "Roboto", sans-serif;
